--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 	
 
-	<section class="box">
+	<section class="box-cotent">
 		<div class="geospatial">
 			<h2>
 				T-Kartor Geospatial
@@ -53,7 +53,7 @@
 
 	
 
-	<section class="box">
+	<section class="box-cotent">
 		<div class="usa">
 			<h2>
 				T-Kartor USA
